payment facilities hidden

--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -148,7 +148,7 @@
           </div>
         </div>
 
-        <h3 class="title">Suggested Donation
+        <!-- <h3 class="title">Suggested Donation
           <span class="simptip-position-bottom simptip-smooth simptip-fade" data-tooltip="Opt out of app market contributions"><i class="fa fa-caret-down" data-action="make-free" ></i></span>
         </h3>
 
@@ -160,7 +160,7 @@
         <div class="donation-instructions">
           Users&nbsp;can&nbsp;chip&nbsp;in&nbsp;any&nbsp;amount,
           but&nbsp;authors&nbsp;set&nbsp;the&nbsp;default&nbsp;position&nbsp;of&nbsp;the&nbsp;slider.
-        </div>
+        </div> -->
 
       </div>
 
