--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -81,7 +81,7 @@
                     <div class="install button" data-action="install-app">INSTALL <i class="icon-arrow-install"></i></div>
                   {{/if}}
 
-                  <div class="chip-in-section {{#unless chipIn}}hidden{{/unless}}">
+                  <!-- <div class="chip-in-section {{#unless chipIn}}hidden{{/unless}}">
                     <div class="slider-section">
                       <div class="text">How much would you like to chip in? All proceeds go to the author.</div>
                       <span class="dollar-sign">&#36;</span><input type="number" class="chip-amount" data-field="chip-amount" /><div class="slider"></div>
@@ -89,7 +89,7 @@
                     <div class="chip-in button" data-action="confirm-chip">CONFIRM</div>
                   </div>
                   <div class="chip-in button {{#if chipIn}}hidden{{/if}}" data-action="chip-in">CHIP IN <i class="fa fa-money"></i></div>
-                  <div class="blurb {{#if chipIn}}hidden{{/if}}">This app is free, and if you like it, feel free to chip in.</div>
+                  <div class="blurb {{#if chipIn}}hidden{{/if}}">This app is free, and if you like it, feel free to chip in.</div> -->
 
                 </div>
 
