changes shown for text fields on edit page (if relevant)

--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -19,7 +19,7 @@
 
         {{#if lastEdit}}
           <div class="message">
-            <i class="green icon-approved_dark"></i>SAVED AT {{dateFormat lastEdit 'hh:mm, DD MMM YYYY'}}
+            <i class="green icon-approved_dark"></i>SAVED AT {{dateFormat lastEdit 'H:mm, DD MMM YYYY'}}
           </div>
         {{/if}}
         {{#if submitted}}
