--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -13,12 +13,28 @@
   {{#with app}}
   <form class="edit-box clearfix validation">
 
+    {{#if parentApp.notes}}
+
+      <h3 class="title inline-block">Notes to the Author: </h3>
+
+      <div class="spacer clearfix"></div>
+
+      <textarea class="note-entry" data-field="note-entry"></textarea>
+
+      <div class="spacer clearfix"></div>
+
+      {{> appNotesBox notes=parentApp.notes}}
+
+      <div class="spacer clearfix"></div>
+
+    {{/if}}
+
     <div class="right-float on-top">
 
       <div class="button-block">
         {{#if lastEdit}}
           <div class="message">
-            <i class="green icon-approved_dark"></i>SAVED AT {{dateFormat lastEdit 'hh:mm, DD MMM YYYY'}}
+            <i class="green icon-approved_dark"></i>SAVED AT {{dateFormat lastEdit 'H:mm, DD MMM YYYY'}}
           </div>
         {{/if}}
         {{#if submitted}}
@@ -54,6 +70,7 @@
       <div class="half-col">
 
         <h3 class="title" data-invalid={{validate 'name'}}>Title</h3>
+        {{#if changedOriginal}}<div class="admin-field">{{parentApp.name}}</div>{{/if}}
         {{#if fieldEdit 'name'}}
           <input type="text" data-field="name" value="{{name}}" required />
         {{else}}
@@ -77,6 +94,7 @@
         <div class="read-only">{{getUsername author}}</div>
 
         <h4 class="mini-title" data-invalid={{validate 'codeLink'}}>Code URL</h4>
+        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentApp.codeLink}}</div>{{/if}}
         {{#if fieldEdit 'codeLink'}}
           <input type="text" data-field="codeLink" value="{{codeLink}}" pattern="https?://.+" />
         {{else}}
@@ -84,6 +102,7 @@
         {{/if}}
 
         <h4 class="mini-title" data-invalid={{validate 'license'}}>License</h4>
+        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentApp.license}}</div>{{/if}}
         {{#if fieldEdit 'license'}}
           <input type="text" data-field="license" value="{{license}}" />
         {{else}}
@@ -102,6 +121,7 @@
       <div class="half-col">
 
         <h4 class="mini-title" data-invalid={{validate 'webLink'}}>Website</h4>
+        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentApp.webLink}}</div>{{/if}}
         {{#if fieldEdit 'webLink'}}
           <input type="text" data-field="webLink" value="{{webLink}}" />
         {{else}}
