--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -453,6 +453,12 @@
       background-position: center;
       background-size: cover;
 
+      .admin-tint {
+        width: 100%;
+        height: 100%;
+        background-color: rgba(170, 121, 198, 0.7)
+      }
+
       &.placeholder {
 
         background-color: #e7e4ea;
