--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -226,7 +226,7 @@
 
 <template name="flagBox">
 
-  <form class="flag-box">
+  <form id="flag-box">
     <div>I believe this app is:</div>
     <div class="divider"></div>
     <div>
