--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -1,7 +1,7 @@
 @import "../../stylesheets/variables";
 @import "../../templates/components/menu";
 
-.upload-box, .edit-box {
+.upload-box, .edit-box, .review-box {
 
   @extend .menu-spacer;
   @extend .margin-right;
