--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -100,10 +100,10 @@
             <i class="icon-revisions"></i>
             <div class="text">Request Revision</div>
           </div>
-          <div class="sandstorm-button color yellow {{showButton 'flagged'}}" data-action="flag">
+          <a class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" href="/admin/review/{{_id}}">
             <i class="icon-flagged_light"></i>
             <div class="text">Flag</div>
-          </div>
+          </a>
           <div class="sandstorm-button color black {{showButton 'rejected'}}" data-action="reject">
             <i class="icon-rejected_light"></i>
             <div class="text">Reject</div>
