flag-box opens on app review page if flag button clicked to access

--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -100,7 +100,7 @@
             <i class="icon-revisions"></i>
             <div class="text">Request Revision</div>
           </div>
-          <a class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" href="/admin/review/{{_id}}">
+          <a class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" href="/admin/review/{{_id}}?flag=true">
             <i class="icon-flagged_light"></i>
             <div class="text">Flag</div>
           </a>
