--- a/app/client/templates/components/menu.scss
+++ b/app/client/templates/components/menu.scss
@@ -94,6 +94,12 @@
 
   @media screen and (max-width: $small-tablet) {
 
+    .menu-link.hide-for-phone {
+
+      display: none;
+
+    }
+
     position: relative;
     width: 100%;
 
