--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -11,7 +11,7 @@
   </div>
 
   {{#with app}}
-  <form class="review-box clearfix validation">
+  <form class="review-page-box clearfix validation">
 
     <div class="section">
 
