--- a/app/client/templates/components/menu.scss
+++ b/app/client/templates/components/menu.scss
@@ -124,7 +124,8 @@
 
   @media screen and (max-width: $small-tablet) {
 
-    margin-left: 0;
+    margin-left: 1rem;
+    margin-right: 1rem;
 
   }
 
