--- a/app/client/templates/home/home.scss
+++ b/app/client/templates/home/home.scss
@@ -17,7 +17,8 @@ body {
 
   @media screen and (max-width: $small-tablet) {
 
-    padding-left: 0;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
   }
 
