tweaked appearance of apps by me (no apps) on mobile

--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -47,7 +47,7 @@
 
     </div>
 
-    <div class="action-buttons">
+    <div class="clearfix action-buttons">
 
       <div class="container">
         <a class="primary large-button" href="/upload">
@@ -68,6 +68,9 @@
       </div>
 
     </div>
+
+    <div class="clearfix margin-bottom-phone"></div>
+
   </div>
 
 </template>
