--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -81,7 +81,7 @@
 
     <div class="apps-by-me-bar">
 
-      <div class="left-float">
+      <div class="left-float block-phone">
 
         <div class="button-block">
           <a class="sandstorm-button primary" href="/upload">
@@ -95,13 +95,13 @@
         </div>
 
       </div>
-      <div class="right-float">
+      <div class="right-float block-phone">
 
         <div class="button-block">
-          <div class="sandstorm-button neutral" data-action="open-sort-menu">
+          <!-- <div class="sandstorm-button neutral" data-action="open-sort-menu">
             SORT
             <i class="fa fa-caret-down"></i>
-          </div>
+          </div> -->
           <div class="sandstorm-input">
             <div class="input">
               <input type="text" data-field="search-by" />
