changed phone nav icon to hamburger when closed, hid Upload App on phone

--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -49,13 +49,13 @@
 
     <div class="clearfix action-buttons">
 
-      <div class="container">
+      <div class="container hide-for-phone">
         <a class="primary large-button" href="/upload">
           <i class="icon-myapps"></i>
           UPLOAD YOUR FIRST APP
         </a>
       </div>
-      <div class="container">
+      <div class="container hide-for-phone">
         <div class="or">
           OR
         </div>
@@ -84,7 +84,7 @@
       <div class="left-float block-phone">
 
         <div class="button-block">
-          <a class="sandstorm-button primary" href="/upload">
+          <a class="sandstorm-button primary hide-for-phone" href="/upload">
             <i class="icon-myapps"></i>
             <span class="text">UPLOAD NEW APP</span>
           </a>
