--- a/app/client/templates/appsByMe/appsByMe.scss
+++ b/app/client/templates/appsByMe/appsByMe.scss
@@ -108,6 +108,12 @@
         display: inline-block;
       }
 
+      &.hide-for-phone {
+        @media (max-width: $small-tablet) {
+          display: none;
+        }
+      }
+
     }
 
     @media (max-width: $large-tablet) {
