--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -150,6 +150,12 @@
     display: none !important;
   }
 
+  &.hide-for-phone {
+    @media (max-width: $small-tablet) {
+      display: none;
+    }
+  }
+
   &.active {
     @extend .sandstorm-button.secondary;
     z-index: 1;
