refactored reviews into separate collection, with hooks to populate users and apps with denormalised data.  reworked back-end to facilitate new review system

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -26,7 +26,7 @@
 
             <a href="/appMarket/author/{{author}}"><div class="app-author">{{getUsername author}}</div></a>
 
-            <div class="app-rating">{{{appRating stars}}}</div>
+            <div class="app-rating">{{{appRating rating}}}</div>
 
             <div class="install-price">
 
@@ -82,7 +82,7 @@
             </div>
           {{else}}
             <div class="app-rating">
-              {{{appRating stars}}}
+              {{{appRating rating}}}
             </div>
           {{/if}}
 
