--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -88,7 +88,7 @@
       <div class="app-item-inner">
 
         <div class="label">Notes to the Author:</div>
-        <textarea class="admin-notes" data-field="admin-notes">{{adminNotes}}</textarea>
+        <textarea class="admin-notes" data-field="admin-notes" data-tooltip="shift-enter to submit">{{adminNotes}}</textarea>
 
         <div class="button-block">
 
