--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -272,8 +272,12 @@
       }
     }
 
-    .upload-confirm {
+    .upload-confirm, .upload-error {
       margin-top: 1.5rem;
+    }
+
+    .upload-error {
+      color: #800000;
     }
 
   }
