changed to lookback:tooltips across the board.  fixes #99

--- a/app/client/templates/admin/admin.html
+++ b/app/client/templates/admin/admin.html
@@ -24,15 +24,13 @@
 
   </div>
 
-  {{ > tooltips }}
-
 </template>
 
 <template name="adminFilters">
 
   {{#each adminFilters}}
 
-    <div class="admin-filter {{#if tooltip}}simptip-position-top simptip-fade{{/if}} {{color}} {{active}}" data-action="select-filter" data-tooltip={{tooltip}}>
+    <div class="admin-filter {{color}} {{active}}" data-action="select-filter" data-tooltip={{tooltip}} data-tooltip-direction="s">
 
       <i class="{{icon}}"></i>
       <div class="text">
